--- a/index.html
+++ b/index.html
@@ -18,19 +18,10 @@
   <meta property="twitter:title" content="AllFines | Premium Audio" />
   <meta property="twitter:description" content="Premium audio experience with cutting-edge technology." />
 
-  <!-- Preconnect para acelerar conexões -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preconnect" href="https://aistudiocdn.com" crossorigin />
-  <link rel="preconnect" href="https://cdn.tailwindcss.com" crossorigin />
-  <link rel="preconnect" href="https://unpkg.com" crossorigin />
-
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet" />
-
-  <!-- Preload crítico -->
-  <link rel="preload" href="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js" as="script" crossorigin />
-  <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -53,30 +44,34 @@
           keyframes: {
             'reveal-word': {
               from: { opacity: '0', transform: 'translateY(10px)' },
-              to: { opacity: '1', transform: 'translateY(0)' },
+              to:   { opacity: '1', transform: 'translateY(0)' },
             },
             'letter-reveal': {
-              '0%': { opacity: 0, transform: 'translateY(20px) scale(0.8)' },
+              '0%':   { opacity: 0, transform: 'translateY(20px) scale(0.8)' },
               '100%': { opacity: 1, transform: 'translateY(0) scale(1)' },
             },
             'logo-bar-1': {
-              '0%': { transform: 'translateY(-40px)', opacity: 0 },
+              '0%':   { transform: 'translateY(-40px)', opacity: 0 },
               '100%': { transform: 'translateY(0)', opacity: 1 },
             },
             'logo-bar-2': {
-              '0%': { transform: 'translateY(40px)', opacity: 0 },
+              '0%':   { transform: 'translateY(40px)', opacity: 0 },
               '100%': { transform: 'translateY(0)', opacity: 1 },
             },
             'blob-animation': {
-              '0%': { transform: 'translate(0px, 0px) scale(1)' },
-              '33%': { transform: 'translate(30px, -50px) scale(1.1)' },
-              '66%': { transform: 'translate(-20px, 20px) scale(0.9)' },
+              '0%':   { transform: 'translate(0px, 0px) scale(1)' },
+              '33%':  { transform: 'translate(30px, -50px) scale(1.1)' },
+              '66%':  { transform: 'translate(-20px, 20px) scale(0.9)' },
               '100%': { transform: 'translate(0px, 0px) scale(1)' },
+            },
+            'fade-in': {
+              from: { opacity: 0 },
+              to:   { opacity: 1 },
             },
             fadeIn: {
               '0%': { opacity: '0', transform: 'translateY(10px)' },
               '100%': { opacity: '1', transform: 'translateY(0)' },
-            },
+            }
           },
           animation: {
             'reveal-word': 'reveal-word 0.5s cubic-bezier(0.215, 0.61, 0.355, 1) forwards',
@@ -84,8 +79,8 @@
             'logo-bar-1': 'logo-bar-1 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) forwards',
             'logo-bar-2': 'logo-bar-2 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) forwards',
             'blob': 'blob-animation 20s infinite ease-in-out',
+            'fade-in': 'fade-in 0.3s ease-in-out',
             'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-            'fade-in': 'fadeIn 0.5s ease-out forwards',
           }
         }
       },
@@ -106,16 +101,16 @@
   <!-- Babel Standalone -->
   <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
 
-  <!-- Import map atualizado -->
+  <!-- Import map das libs -->
   <script type="importmap">
 {
   "imports": {
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/jsx-runtime": "https://aistudiocdn.com/react@^19.2.0/jsx-runtime",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
   }
 }
@@ -128,11 +123,23 @@
       color: white;
     }
     /* Custom Scrollbar */
-    ::-webkit-scrollbar { width: 6px; }
-    ::-webkit-scrollbar-track { background: #020617; }
-    ::-webkit-scrollbar-thumb { background: #334155; border-radius: 0px; }
-    ::-webkit-scrollbar-thumb:hover { background: #FFD700; }
+    ::-webkit-scrollbar {
+      width: 6px;
+    }
+    ::-webkit-scrollbar-track {
+      background: #020617; 
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #334155; 
+      border-radius: 0px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #FFD700; 
+    }
   </style>
+
+  <!-- Pré-carrega o entry -->
+  <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
 </head>
 <body class="bg-agency-dark text-white font-sans">
   <noscript>Você precisa habilitar o JavaScript para rodar esta aplicação.</noscript>
@@ -140,12 +147,12 @@
 
   <script type="module">
     const blobCache = new Map();
-    const pendingLoads = new Map();
 
-    // Carrega o arquivo TS/TSX com cache de promessas para evitar duplicatas
+    // Carrega o arquivo TS/TSX, tentando extensões padrão (.tsx, .ts, /index.tsx, /index.ts)
     async function loadSource(path, parentUrl) {
       const baseUrl = new URL(path, parentUrl).href;
 
+      // Se já tem extensão, tenta direto
       if (/\.(tsx?|jsx?)($|\?)/.test(baseUrl)) {
         const res = await fetch(baseUrl);
         if (!res.ok) throw new Error('Não foi possível carregar ' + baseUrl);
@@ -153,77 +160,94 @@
       }
 
       const base = baseUrl.replace(/\/$/, '');
-      const candidates = [base + '.tsx', base + '.ts', base + '/index.tsx', base + '/index.ts'];
+      const candidates = [
+        base + '.tsx',
+        base + '.ts',
+        base + '/index.tsx',
+        base + '/index.ts',
+      ];
 
       for (const url of candidates) {
         try {
           const res = await fetch(url);
-          if (res.ok) return { absoluteUrl: url, sourceCode: await res.text() };
-        } catch (_) {}
+          if (res.ok) {
+            return { absoluteUrl: url, sourceCode: await res.text() };
+          }
+        } catch (_) {
+          // ignora, tenta o próximo
+        }
       }
 
       throw new Error('Não foi possível encontrar o arquivo para ' + baseUrl);
     }
 
-    async function resolveAndTranspile(entryPath, parentUrl = location.href) {
+    async function resolveAndTranspile(entryPath, parentUrl = window.location.href) {
+      // 1) Descobre o arquivo real (.tsx/.ts) e lê o código-fonte
       const { absoluteUrl, sourceCode } = await loadSource(entryPath, parentUrl);
 
-      // Retorna cache se existir
-      if (blobCache.has(absoluteUrl)) return blobCache.get(absoluteUrl);
+      // Cache por arquivo real (URL com extensão)
+      if (blobCache.has(absoluteUrl)) {
+        return blobCache.get(absoluteUrl);
+      }
 
-      // Evita processamento duplicado de arquivos em paralelo
-      if (pendingLoads.has(absoluteUrl)) return pendingLoads.get(absoluteUrl);
-
-      const processPromise = (async () => {
-        // Extrai imports relativos
-        const importRegex = /\bimport\s+[^'"]*['"](\..*?)['"]/g;
-        const deps = new Map();
-        let m;
-        while ((m = importRegex.exec(sourceCode))) deps.set(m[1], null);
-
-        // Resolve dependências em paralelo
-        await Promise.all([...deps.keys()].map(async (dep) => {
-          deps.set(dep, await resolveAndTranspile(dep, absoluteUrl));
-        }));
-
-        // Reescreve imports para blob URLs
-        let code = sourceCode;
-        for (const [orig, blob] of deps) {
-          code = code.replace(new RegExp(`(['"])${orig.replace(/[.*+?^${}()|[\]\\]/g, '\\$&')}\\1`, 'g'), `$1${blob}$1`);
+      // 2) Descobre imports relativos (somente "import ... from '...';")
+      const importRegex = /\bimport\s+[^'"]*['"](.*?)['"]/g;
+      const dependencies = new Map();
+      let match;
+      while ((match = importRegex.exec(sourceCode)) !== null) {
+        const depPath = match[1];
+        if (depPath.startsWith('.')) {
+          dependencies.set(depPath, null);
         }
+      }
 
-        // Transpila com Babel
-        const { code: transpiled } = Babel.transform(code, {
-          presets: [
-            ['react', { runtime: 'automatic' }],
-            ['typescript', { allExtensions: true, isTSX: true }]
-          ],
-          sourceType: 'module',
-          filename: absoluteUrl
-        });
+      // 3) Resolve recursivamente as dependências em paralelo
+      await Promise.all(
+        Array.from(dependencies.keys()).map(async (depPath) => {
+          const childBlobUrl = await resolveAndTranspile(depPath, absoluteUrl);
+          dependencies.set(depPath, childBlobUrl);
+        })
+      );
 
-        // Cria Blob URL
-        const blobUrl = URL.createObjectURL(new Blob([transpiled], { type: 'application/javascript' }));
-        blobCache.set(absoluteUrl, blobUrl);
-        pendingLoads.delete(absoluteUrl);
-        return blobUrl;
-      })();
+      // 4) Reescreve os imports locais para apontar para os blobs
+      let transformedCode = sourceCode;
+      for (const [originalPath, blobUrl] of dependencies.entries()) {
+        const re = new RegExp(`(['"])${originalPath}\\1`, 'g');
+        transformedCode = transformedCode.replace(re, `$1${blobUrl}$1`);
+      }
 
-      pendingLoads.set(absoluteUrl, processPromise);
-      return processPromise;
+      // 5) Transpila TSX -> JS com Babel (React + TypeScript)
+      const { code } = Babel.transform(transformedCode, {
+        presets: [
+          ['react', { runtime: 'automatic' }],
+          ['typescript', { allExtensions: true, isTSX: true }]
+        ],
+        sourceType: 'module',
+        filename: absoluteUrl
+      });
+
+      // 6) Cria um Blob URL para esse módulo e guarda em cache
+      const blobUrl = URL.createObjectURL(
+        new Blob([code], { type: 'application/javascript' })
+      );
+
+      blobCache.set(absoluteUrl, blobUrl);
+      return blobUrl;
     }
 
     (async () => {
       try {
-        const entry = await resolveAndTranspile('/index.tsx');
-        await import(entry);
-      } catch (e) {
-        console.error('Falha ao inicializar:', e);
-        document.getElementById('root').innerHTML = `
-          <div style="color:#ff8b8b;background:#2b0f0f;padding:20px;border-radius:8px;font-family:monospace;white-space:pre-wrap;margin:20px;">
-            <h2>Erro na Aplicação</h2>
-            <p>${e.message}</p>
-          </div>`;
+        // Entrada da app: ajuste aqui se seu entry não for /index.tsx
+        const entryModuleUrl = await resolveAndTranspile('/index.tsx');
+        await import(entryModuleUrl);
+      } catch (error) {
+        console.error('Falha ao inicializar a aplicação:', error);
+        const rootEl = document.getElementById('root');
+        rootEl.innerHTML =
+          `<div style="color:#ff8b8b; background:#2b0f0f; padding:20px; border-radius:8px; font-family:monospace; white-space:pre-wrap;">
+             <h2>Erro na Aplicação</h2>
+             <p>${error.message}</p>
+           </div>`;
       }
     })();
   </script>
