--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#020617" />
-
-  <!-- SEO -->
   <title>AllFines | Premium Audio</title>
-  <meta name="description" content="Premium audio experience with cutting-edge technology." />
-  <link rel="canonical" href="./" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="./" />
-  <meta property="og:title" content="AllFines | Premium Audio" />
-  <meta property="og:description" content="Premium audio experience with cutting-edge technology." />
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="./" />
-  <meta property="twitter:title" content="AllFines | Premium Audio" />
-  <meta property="twitter:description" content="Premium audio experience with cutting-edge technology." />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -105,13 +93,11 @@
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/jsx-runtime": "https://aistudiocdn.com/react@^19.2.0/jsx-runtime",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+    "@google/genai": "https://esm.sh/@google/genai@0.14.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.453.0"
   }
 }
 </script>
@@ -138,10 +124,10 @@
     }
   </style>
 
-  <!-- Pré-carrega o entry -->
+  <!-- Pré-carrega o entry (ajuda um pouco no tempo total) -->
   <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
 </head>
-<body class="bg-agency-dark text-white font-sans">
+<body class="bg-[#020617] text-white font-sans">
   <noscript>Você precisa habilitar o JavaScript para rodar esta aplicação.</noscript>
   <div id="root"></div>
 
