--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AllFines | Premium Audio</title>
 
-    <!-- CRÍTICO: Corrige o erro "process is not defined" enganando as libs -->
+    <!-- 1. CORREÇÃO DE AMBIENTE: Previne erro "process is not defined" -->
     <script>
-      window.process = {
-        env: { NODE_ENV: 'development' }
-      };
+      window.process = { env: { NODE_ENV: 'development' } };
     </script>
 
-    <!-- Tailwind Configuração (AllFines Original) -->
+    <!-- 2. BOOTSTRAP VISUAL: Mantendo configurações originais do AllFines -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    
     <script>
       tailwind.config = {
         theme: {
@@ -24,9 +24,9 @@
             },
             colors: {
               agency: {
-                yellow: '#FFD700', // Gold/Yellow
+                yellow: '#FFD700', 
                 black: '#0a0a0a',
-                dark: '#020617',  // Very dark blue
+                dark: '#020617',  
                 slate: '#1e293b',
               }
             },
@@ -44,62 +44,53 @@
         }
       }
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <!-- CSS (AllFines Original) -->
     <style>
       body {
         background-color: #020617;
         color: white;
+        overflow-y: auto; /* Mantido do código 1 para garantir scroll */
       }
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #020617; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #334155; 
-        border-radius: 0px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #FFD700; 
-      }
+      /* Custom Scrollbar - Original AllFines */
+      ::-webkit-scrollbar { width: 6px; }
+      ::-webkit-scrollbar-track { background: #020617; }
+      ::-webkit-scrollbar-thumb { background: #334155; border-radius: 0px; }
+      ::-webkit-scrollbar-thumb:hover { background: #FFD700; }
     </style>
 
-    <!-- Mecanismo de Transpilação (Exatamente como Code 1) -->
+    <!-- 3. MOTOR DE TRANSPILAÇÃO (Vindo do Código 1) -->
     <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
 
-    <!-- Import Map Adaptado para compatibilidade Browser (Usa esm.sh para evitar erros de ambiente) -->
+    <!-- 4. IMPORT MAP (Adaptado para funcionar como o Código 1 via ESM.sh) -->
+    <!-- Isso resolve o erro de "API Key must be set" ao usar a build correta de navegador -->
     <script type="importmap">
     {
       "imports": {
+        "react": "https://esm.sh/react@18.2.0",
+        "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
         "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
-        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-        "react/": "https://aistudiocdn.com/react@^19.2.0/",
-        "react": "https://aistudiocdn.com/react@^19.2.0",
-        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+        "@google/genai": "https://esm.sh/@google/genai@0.14.0",
+        "lucide-react": "https://esm.sh/lucide-react@0.294.0"
       }
     }
     </script>
 
-    <!-- Otimização de carregamento -->
+    <!-- Pré-carregamento para performance -->
     <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para rodar esta aplicação.</noscript>
     <div id="root"></div>
 
-    <!-- Script Lógico (Igual ao Code 1 para garantir funcionamento) -->
+    <!-- 5. SCRIPT DE CARREGAMENTO (IMPORTADO INTEGRALMENTE DO CÓDIGO 1) -->
     <script type="module">
       const blobCache = new Map();
 
-      // Carrega o arquivo TS/TSX
+      // Carrega o arquivo TS/TSX, tentando extensões padrão (.tsx, .ts, /index.tsx, /index.ts)
       async function loadSource(path, parentUrl) {
         const baseUrl = new URL(path, parentUrl).href;
 
+        // Se já tem extensão, tenta direto
         if (/\.(tsx?|jsx?)($|\?)/.test(baseUrl)) {
           const res = await fetch(baseUrl);
           if (!res.ok) throw new Error('Não foi possível carregar ' + baseUrl);
@@ -120,24 +111,24 @@
             if (res.ok) {
               return { absoluteUrl: url, sourceCode: await res.text() };
             }
-          } catch (_) {}
+          } catch (_) {
+            // ignora, tenta o próximo
+          }
         }
 
         throw new Error('Não foi possível encontrar o arquivo para ' + baseUrl);
       }
 
       async function resolveAndTranspile(entryPath, parentUrl = window.location.href) {
-        // Verifica cache de módulo já processado
-        const targetUrl = new URL(entryPath, parentUrl).href;
-        // Nota: A lógica de cache precisa ser por sourceCodeURL pois ainda não sabemos o URL final sem loadSource.
-        // A lógica do codigo 1 faz o load primeiro:
+        // 1) Descobre o arquivo real (.tsx/.ts) e lê o código-fonte
         const { absoluteUrl, sourceCode } = await loadSource(entryPath, parentUrl);
 
+        // Cache por arquivo real (URL com extensão)
         if (blobCache.has(absoluteUrl)) {
           return blobCache.get(absoluteUrl);
         }
 
-        // 1. Resolve dependências
+        // 2) Descobre imports relativos (somente "import ... from '...';")
         const importRegex = /\bimport\s+[^'"]*['"](.*?)['"]/g;
         const dependencies = new Map();
         let match;
@@ -148,7 +139,7 @@
           }
         }
 
-        // 2. Processa dependências locais recursivamente
+        // 3) Resolve recursivamente as dependências em paralelo
         await Promise.all(
           Array.from(dependencies.keys()).map(async (depPath) => {
             const childBlobUrl = await resolveAndTranspile(depPath, absoluteUrl);
@@ -156,14 +147,14 @@
           })
         );
 
-        // 3. Monta código final substituindo imports
+        // 4) Reescreve os imports locais para apontar para os blobs
         let transformedCode = sourceCode;
         for (const [originalPath, blobUrl] of dependencies.entries()) {
           const re = new RegExp(`(['"])${originalPath}\\1`, 'g');
           transformedCode = transformedCode.replace(re, `$1${blobUrl}$1`);
         }
 
-        // 4. Babel Transform
+        // 5) Transpila TSX -> JS com Babel (React + TypeScript)
         const { code } = Babel.transform(transformedCode, {
           presets: [
             ['react', { runtime: 'automatic' }],
@@ -173,6 +164,7 @@
           filename: absoluteUrl
         });
 
+        // 6) Cria um Blob URL para esse módulo e guarda em cache
         const blobUrl = URL.createObjectURL(
           new Blob([code], { type: 'application/javascript' })
         );
@@ -183,14 +175,15 @@
 
       (async () => {
         try {
+          // Entrada da app: ajuste aqui se seu entry não for /index.tsx
           const entryModuleUrl = await resolveAndTranspile('/index.tsx');
           await import(entryModuleUrl);
         } catch (error) {
-          console.error('Falha de Inicialização:', error);
+          console.error('Falha ao inicializar a aplicação:', error);
           const rootEl = document.getElementById('root');
           rootEl.innerHTML =
-            `<div style="color:#ef4444; background:#1e1e1e; padding:24px; font-family:'Menlo',monospace; border-left: 4px solid #ef4444;">
-               <h2 style="font-size:1.2rem; font-weight:bold; margin-bottom:10px">Erro na Aplicação</h2>
+            `<div style="color:#FFAAAA; background:#2b0f0f; padding:20px; font-family:monospace; border-left: 4px solid red;">
+               <h2 class="text-xl font-bold mb-2">Erro na Aplicação AllFines</h2>
                <p>${error.message}</p>
              </div>`;
         }
