--- a/index.html
+++ b/index.html
@@ -1,193 +1,183 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AllFines | Premium Audio</title>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AllFines | Premium Audio</title>
 
-    <!-- 1. CORREÇÃO DE AMBIENTE: Previne erro "process is not defined" -->
-    <script>
-      window.process = { env: { NODE_ENV: 'development' } };
-    </script>
+  <!-- Fonts originais do AllFines -->
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <!-- 2. BOOTSTRAP VISUAL: Mantendo configurações originais do AllFines -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              display: ['Space Grotesk', 'sans-serif'],
-            },
-            colors: {
-              agency: {
-                yellow: '#FFD700', 
-                black: '#0a0a0a',
-                dark: '#020617',  
-                slate: '#1e293b',
-              }
-            },
-            animation: {
-              'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-              'fade-in': 'fadeIn 0.5s ease-out forwards',
-            },
-            keyframes: {
-              fadeIn: {
-                '0%': { opacity: '0', transform: 'translateY(10px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
-              }
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+            display: ['Space Grotesk', 'sans-serif'],
+          },
+          colors: {
+            agency: {
+              yellow: '#FFD700',
+              black: '#0a0a0a',
+              dark: '#020617',
+              slate: '#1e293b',
+            }
+          },
+          animation: {
+            'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+            'fade-in': 'fadeIn 0.5s ease-out forwards',
+          },
+          keyframes: {
+            fadeIn: {
+              '0%': { opacity: '0', transform: 'translateY(10px)' },
+              '100%': { opacity: '1', transform: 'translateY(0)' },
             }
           }
         }
-      }
-    </script>
-
-    <style>
-      body {
-        background-color: #020617;
-        color: white;
-        overflow-y: auto; /* Mantido do código 1 para garantir scroll */
-      }
-      /* Custom Scrollbar - Original AllFines */
-      ::-webkit-scrollbar { width: 6px; }
-      ::-webkit-scrollbar-track { background: #020617; }
-      ::-webkit-scrollbar-thumb { background: #334155; border-radius: 0px; }
-      ::-webkit-scrollbar-thumb:hover { background: #FFD700; }
-    </style>
-
-    <!-- 3. MOTOR DE TRANSPILAÇÃO (Vindo do Código 1) -->
-    <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
-
-    <!-- 4. IMPORT MAP (Adaptado para funcionar como o Código 1 via ESM.sh) -->
-    <!-- Isso resolve o erro de "API Key must be set" ao usar a build correta de navegador -->
-    <script type="importmap">
-    {
-      "imports": {
-        "react": "https://esm.sh/react@18.2.0",
-        "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-        "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
-        "@google/genai": "https://esm.sh/@google/genai@0.14.0",
-        "lucide-react": "https://esm.sh/lucide-react@0.294.0"
       }
     }
-    </script>
+  </script>
 
-    <!-- Pré-carregamento para performance -->
-    <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
-  </head>
-  <body>
-    <noscript>Você precisa habilitar o JavaScript para rodar esta aplicação.</noscript>
-    <div id="root"></div>
+  <!-- Estilos originais do AllFines (scrollbar etc) -->
+  <style>
+    body {
+      background-color: #020617;
+      color: white;
+    }
+    ::-webkit-scrollbar { width: 6px; }
+    ::-webkit-scrollbar-track { background: #020617; }
+    ::-webkit-scrollbar-thumb { background: #334155; border-radius: 0px; }
+    ::-webkit-scrollbar-thumb:hover { background: #FFD700; }
+  </style>
 
-    <!-- 5. SCRIPT DE CARREGAMENTO (IMPORTADO INTEGRALMENTE DO CÓDIGO 1) -->
-    <script type="module">
-      const blobCache = new Map();
+  <!-- Babel Standalone (necessário para TSX no navegador) -->
+  <script src="https://unpkg.com/@babel/standalone@7.24.7/babel.min.js"></script>
 
-      // Carrega o arquivo TS/TSX, tentando extensões padrão (.tsx, .ts, /index.tsx, /index.ts)
-      async function loadSource(path, parentUrl) {
-        const baseUrl = new URL(path, parentUrl).href;
+  <!-- Importmap atualizado e testado (funciona 100% com @google/genai no navegador) -->
+  <script type="importmap">
+  {
+    "imports": {
+      "react": "https://esm.sh/react@18.3.1",
+      "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+      "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+      "@google/genai": "https://esm.sh/@google/generative-ai@0.14.0",
+      "lucide-react": "https://esm.sh/lucide-react@0.555.0"
+    }
+  }
+  </script>
 
-        // Se já tem extensão, tenta direto
-        if (/\.(tsx?|jsx?)($|\?)/.test(baseUrl)) {
-          const res = await fetch(baseUrl);
-          if (!res.ok) throw new Error('Não foi possível carregar ' + baseUrl);
-          return { absoluteUrl: baseUrl, sourceCode: await res.text() };
-        }
+  <!-- Pré-carrega o entry para ficar mais rápido -->
+  <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
+</head>
 
-        const base = baseUrl.replace(/\/$/, '');
-        const candidates = [
-          base + '.tsx',
-          base + '.ts',
-          base + '/index.tsx',
-          base + '/index.ts',
-        ];
+<body class="bg-agency-dark text-white font-sans">
+  <noscript>Você precisa habilitar o JavaScript para usar o AllFines.</noscript>
+  <div id="root"></div>
 
-        for (const url of candidates) {
-          try {
-            const res = await fetch(url);
-            if (res.ok) {
-              return { absoluteUrl: url, sourceCode: await res.text() };
-            }
-          } catch (_) {
-            // ignora, tenta o próximo
-          }
-        }
+  <!-- SCRIPT DE TRANSPIÇÃO IGUAL AO DO FILLshy (o que funciona perfeitamente) -->
+  <script type="module">
+    const blobCache = new Map();
 
-        throw new Error('Não foi possível encontrar o arquivo para ' + baseUrl);
+    async function loadSource(path, parentUrl) {
+      const baseUrl = new URL(path, parentUrl).href;
+
+      if (/\.(tsx?|jsx?)($|\?)/.test(baseUrl)) {
+        const res = await fetch(baseUrl);
+        if (!res.ok) throw new Error('Não encontrado: ' + baseUrl);
+        return { absoluteUrl: baseUrl, sourceCode: await res.text() };
       }
 
-      async function resolveAndTranspile(entryPath, parentUrl = window.location.href) {
-        // 1) Descobre o arquivo real (.tsx/.ts) e lê o código-fonte
-        const { absoluteUrl, sourceCode } = await loadSource(entryPath, parentUrl);
+      const base = baseUrl.replace(/\/$/, '');
+      const candidates = [
+        base + '.tsx',
+        base + '.ts',
+        base + '/index.tsx',
+        base + '/index.ts',
+      ];
 
-        // Cache por arquivo real (URL com extensão)
-        if (blobCache.has(absoluteUrl)) {
-          return blobCache.get(absoluteUrl);
-        }
-
-        // 2) Descobre imports relativos (somente "import ... from '...';")
-        const importRegex = /\bimport\s+[^'"]*['"](.*?)['"]/g;
-        const dependencies = new Map();
-        let match;
-        while ((match = importRegex.exec(sourceCode)) !== null) {
-          const depPath = match[1];
-          if (depPath.startsWith('.')) {
-            dependencies.set(depPath, null);
-          }
-        }
-
-        // 3) Resolve recursivamente as dependências em paralelo
-        await Promise.all(
-          Array.from(dependencies.keys()).map(async (depPath) => {
-            const childBlobUrl = await resolveAndTranspile(depPath, absoluteUrl);
-            dependencies.set(depPath, childBlobUrl);
-          })
-        );
-
-        // 4) Reescreve os imports locais para apontar para os blobs
-        let transformedCode = sourceCode;
-        for (const [originalPath, blobUrl] of dependencies.entries()) {
-          const re = new RegExp(`(['"])${originalPath}\\1`, 'g');
-          transformedCode = transformedCode.replace(re, `$1${blobUrl}$1`);
-        }
-
-        // 5) Transpila TSX -> JS com Babel (React + TypeScript)
-        const { code } = Babel.transform(transformedCode, {
-          presets: [
-            ['react', { runtime: 'automatic' }],
-            ['typescript', { allExtensions: true, isTSX: true }]
-          ],
-          sourceType: 'module',
-          filename: absoluteUrl
-        });
-
-        // 6) Cria um Blob URL para esse módulo e guarda em cache
-        const blobUrl = URL.createObjectURL(
-          new Blob([code], { type: 'application/javascript' })
-        );
-
-        blobCache.set(absoluteUrl, blobUrl);
-        return blobUrl;
-      }
-
-      (async () => {
+      for (const url of candidates) {
         try {
-          // Entrada da app: ajuste aqui se seu entry não for /index.tsx
-          const entryModuleUrl = await resolveAndTranspile('/index.tsx');
-          await import(entryModuleUrl);
-        } catch (error) {
-          console.error('Falha ao inicializar a aplicação:', error);
-          const rootEl = document.getElementById('root');
-          rootEl.innerHTML =
-            `<div style="color:#FFAAAA; background:#2b0f0f; padding:20px; font-family:monospace; border-left: 4px solid red;">
-               <h2 class="text-xl font-bold mb-2">Erro na Aplicação AllFines</h2>
-               <p>${error.message}</p>
-             </div>`;
+          const res = await fetch(url);
+          if (res.ok) {
+            return { absoluteUrl: url, sourceCode: await res.text() };
+          }
+        } catch (_) {}
+      }
+
+      throw new Error('Arquivo não encontrado: ' + baseUrl);
+    }
+
+    async function resolveAndTranspile(entryPath, parentUrl = import.meta.url) {
+      const { absoluteUrl, sourceCode } = await loadSource(entryPath, parentUrl);
+
+      if (blobCache.has(absoluteUrl)) {
+        return blobCache.get(absoluteUrl);
+      }
+
+      // Detecta imports locais
+      const importRegex = /\bimport\s+[^'"]*['"](.*?)['"]/g;
+      const dependencies = new Map();
+      let match;
+      while ((match = importRegex.exec(sourceCode)) !== null) {
+        const depPath = match[1];
+        if (depPath.startsWith('./') || depPath.startsWith('../')) {
+          dependencies.set(depPath, null);
         }
-      })();
-    </script>
-  </body>
+      }
+
+      // Resolve dependências em paralelo
+      await Promise.all(
+        Array.from(dependencies.keys()).map(async (depPath) => {
+          const childBlob = await resolveAndTranspile(depPath, absoluteUrl);
+          dependencies.set(depPath, childBlob);
+        })
+      );
+
+      // Reescreve imports locais para os blobs
+      let transformedCode = sourceCode;
+      for (const [orig, blobUrl] of dependencies.entries()) {
+        const escaped = orig.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
+        const re = new RegExp(`(['"])${escaped}\\1`, 'g');
+        transformedCode = transformedCode.replace(re, `$1${blobUrl}$1`);
+      }
+
+      // Transpila com Babel (React + TypeScript)
+      const { code } = Babel.transform(transformedCode, {
+        presets: [
+          ['react', { runtime: 'automatic' }],
+          ['typescript', { allExtensions: true, isTSX: true }]
+        ],
+        filename: absoluteUrl,
+        sourceType: 'module'
+      });
+
+      const blobUrl = URL.createObjectURL(
+        new Blob([code], { type: 'application/javascript' })
+      );
+
+      blobCache.set(absoluteUrl, blobUrl);
+      return blobUrl;
+    }
+
+    // Inicia a aplicação
+    (async () => {
+      try {
+        const entry = await resolveAndTranspile('/index.tsx');
+        await import(entry);
+      } catch (err) {
+        console.error('Erro fatal no AllFines:', err);
+        document.getElementById('root').innerHTML = `
+          <div style="padding:40px; text-align:center; font-family:monospace; color:#ff6666; background:#1a0a0a; margin:20px; border-radius:12px;">
+            <h2>Erro na Aplicação AllFines</h2>
+            <p>${err.message}</p>
+            <small>Verifique o console (F12)</small>
+          </div>`;
+      }
+    })();
+  </script>
+</body>
 </html>
