--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
 
   <!-- Importmap atualizado e testado (funciona 100% com @google/genai no navegador) -->
   <script type="importmap">
-  {
-    "imports": {
-      "react": "https://esm.sh/react@18.3.1",
-      "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-      "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
-      "@google/genai": "https://esm.sh/@google/generative-ai@0.14.0",
-      "lucide-react": "https://esm.sh/lucide-react@0.555.0"
-    }
+{
+  "imports": {
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@0.21.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.555.0"
   }
-  </script>
+}
+</script>
 
   <!-- Pré-carrega o entry para ficar mais rápido -->
   <link rel="preload" href="/index.tsx" as="fetch" crossorigin="anonymous" />
