--- a/index.html
+++ b/index.html
@@ -156,4 +156,51 @@
         await Promise.all(
           Array.from(dependencies.keys()).map(async (depPath) => {
             const childBlobUrl = await resolveAndTranspile(depPath, absoluteUrl);
-            dependenci
+            dependencies.set(depPath, childBlobUrl);
+          })
+        );
+
+        // 4) Reescreve os imports locais
+        let transformedCode = sourceCode;
+        for (const [originalPath, blobUrl] of dependencies.entries()) {
+          const re = new RegExp(`(['"])${originalPath}\\1`, 'g');
+          transformedCode = transformedCode.replace(re, `$1${blobUrl}$1`);
+        }
+
+        // 5) Transpila TSX -> JS com Babel
+        const { code } = Babel.transform(transformedCode, {
+          presets: [
+            ['react', { runtime: 'automatic' }],
+            ['typescript', { allExtensions: true, isTSX: true }]
+          ],
+          sourceType: 'module',
+          filename: absoluteUrl
+        });
+
+        // 6) Cria Blob URL e cacheia
+        const blobUrl = URL.createObjectURL(
+          new Blob([code], { type: 'application/javascript' })
+        );
+
+        blobCache.set(absoluteUrl, blobUrl);
+        return blobUrl;
+      }
+
+      (async () => {
+        try {
+          // Início da aplicação no index.tsx
+          const entryModuleUrl = await resolveAndTranspile('/index.tsx');
+          await import(entryModuleUrl);
+        } catch (error) {
+          console.error('Falha ao inicializar a aplicação:', error);
+          const rootEl = document.getElementById('root');
+          rootEl.innerHTML =
+            `<div style="color:#ff8b8b; background:#2b0f0f; padding:20px; font-family:monospace; border-left:4px solid red; margin: 20px;">
+               <h2 style="font-weight:bold; font-size:1.2em; margin-bottom:10px;">Erro na Aplicação</h2>
+               <p>${error.message}</p>
+             </div>`;
+        }
+      })();
+    </script>
+  </body>
+</html>
